# Waecnan

./: Cargo.toml  TECHNICAL_SPECIFICATION.md  conectar_waecnan.bat
.github/workflows/: ci.yml
crates/waecan-cli/: Cargo.toml
crates/waecan-cli/src/: lib.rs
crates/waecan-core/: Cargo.toml
crates/waecan-core/src/: block.rs  block_validation.rs  difficulty.rs  genesis.rs  lib.rs  transaction.rs  validation.rs
crates/waecan-crypto/src/: hash.rs  pedersen.rs  ring_sig.rs
crates/waecan-mempool/src/: lib.rs
crates/waecan-miner/: Cargo.toml
crates/waecan-miner/src/: lib.rs
crates/waecan-p2p/: Cargo.toml
crates/waecan-p2p/src/: lib.rs
crates/waecan-rpc/: Cargo.toml
crates/waecan-rpc/src/: lib.rs
crates/waecan-storage/src/: db.rs  tests.rs
crates/waecnan-cli/: Cargo.toml
crates/waecnan-cli/src/: lib.rs
crates/waecnan-core/: Cargo.toml
crates/waecnan-core/src/: block.rs  block_validation.rs  difficulty.rs  error.rs  lib.rs  pow.rs  transaction.rs  validation.rs
crates/waecnan-crypto/: Cargo.toml
crates/waecnan-crypto/src/: address.rs  errors.rs  hash.rs  keys.rs  lib.rs  pedersen.rs  ring_sig.rs  stealth.rs
crates/waecnan-mempool/: Cargo.toml
crates/waecnan-mempool/src/: lib.rs
crates/waecnan-miner/: Cargo.toml
crates/waecnan-miner/src/: lib.rs
crates/waecnan-node/: Cargo.toml
crates/waecnan-node/src/: lib.rs
crates/waecnan-p2p/: Cargo.toml
crates/waecnan-p2p/src/: lib.rs
crates/waecnan-rpc/: Cargo.toml
crates/waecnan-rpc/src/: lib.rs
crates/waecnan-storage/: Cargo.toml
crates/waecnan-storage/src/: db.rs  error.rs  lib.rs  record.rs  tests.rs
crates/waecnan-wallet/: Cargo.toml
crates/waecnan-wallet/src/: lib.rs  main.rs
scripts/: testnet.sh
