[workspace]
members = [
  "crates/waecnan-crypto",
  "crates/waecnan-core",
  "crates/waecnan-storage",
  "crates/waecnan-mempool",
  "crates/waecnan-p2p",
  "crates/waecnan-rpc",
  "crates/waecnan-miner",
  "crates/waecnan-wallet",
  "crates/waecnan-node",
  "crates/waecnan-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Waecan Protocol"]
license = "MIT"
