[package]
name = "waecnan-core"
version = "0.1.0"
edition = "2021"

[dependencies]
waecnan-crypto = { path = "../waecnan-crypto" }
curve25519-dalek = "4.1"
thiserror = "1.0"
randomx-rs = "1.2"
tiny-keccak = { version = "2.0", features = ["keccak"] }

[dev-dependencies]
rand = "0.8"
rand_chacha = "0.3"
