[package]
name = "waecnan-mempool"
version.workspace = true
edition.workspace = true

[dependencies]
waecnan-core = { path = "../waecnan-core" }
waecnan-crypto = { path = "../waecnan-crypto" }
curve25519-dalek = "4.1"
thiserror = "1.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }

[dev-dependencies]
rand = "0.8"
rand_chacha = "0.3"
