[package]
name = "waecnan-wallet"
version.workspace = true
edition.workspace = true

[dependencies]
waecnan-core = { path = "../waecnan-core" }
waecnan-crypto = { path = "../waecnan-crypto" }
curve25519-dalek = { version = "4.1", features = ["digest"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
rand_chacha = "0.3"
